[gd_scene load_steps=2 format=3 uid="uid://cvyq55n5x8qjq"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_abc12"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abc12")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TopBar" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 0 # Begin

[node name="ScoreLabel" type="Label" parent="MarginContainer/TopBar"]
layout_mode = 2
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="MarginContainer/TopBar"]
layout_mode = 2
text = "Lives: 3"
